fix scrollbar

--- a/apps/editor/src/pages/form/tabs/Editor/Main/Main.module.css
+++ b/apps/editor/src/pages/form/tabs/Editor/Main/Main.module.css
@@ -3,10 +3,10 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
-	flex: 1;
 
 	overflow-y: auto;
 
+	padding-block: 2px;
 	gap: var(--mantine-spacing-xs);
 }
 
